// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Encoding Progress: Match Snapshots 1 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ImageProgress
    animating={true}
    background="#FFF"
    icon={
      Object {
        "color": "#FFF",
        "name": "share",
        "size": 130,
        "type": "font-awesome",
      }
    }
    onPress={[Function]}
    primaryColor="#009CFF"
  />
</View>
`;

exports[`Encoding Progress: Match Snapshots 2 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ImageProgress
    animating={true}
    background="#17212D"
    icon={
      Object {
        "color": "#FFF",
        "name": "share",
        "size": 130,
        "type": "font-awesome",
      }
    }
    onPress={[Function]}
    primaryColor="#009CFF"
  />
</View>
`;
